# rumorz

./: .gitignore  README.md  generate_ai_docs.py  pyproject.toml  requirements.txt
docs/examples/: bitcoin_sentiment.py  copilot.py  example_script.py  examples.py  real_time_summary.py
rumorz/: client.py  copilot.py  encoder.py  enums.py
rumorz/streamlit_app/: app.py  requirements.txt  streamlit_app.py
rumorz/streamlit_app/.streamlit/: config.toml
rumorz/tests/: test_sdk.py
